# parler-protocol

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  deny.toml  fly.toml  llms.txt  package-lock.json  rust-toolchain.toml  server.json  test_guide.md
.claude/: settings.json
.claude/agents/: code-reviewer.md
.claude/commands/: direct-response-copy.md  work-next.md
.claude/skills/code-standards/: SKILL.md
.claude/skills/parler-review/: SKILL.md
.claude/skills/validate-market/: SKILL.md
.claude/skills/write-blog/: SKILL.md  check.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: audit.yml  canary-scan.yml  ci.yml  deploy.yml  release-cli.yml  release-desktop.yml  release-image.yml
crates/parler-auth/: Cargo.toml
crates/parler-auth/src/: identity.rs  lib.rs  provision.rs
crates/parler-bin/: Cargo.toml
crates/parler-bin/src/: main.rs
crates/parler-cli/: Cargo.toml
crates/parler-cli/src/: bring.rs  connect.rs  conversation.rs  lib.rs  mcp.rs  names.rs  work.rs  worker.rs
crates/parler-cli/src/conversation/: claude.rs  opencode.rs
crates/parler-connector/: Cargo.toml
crates/parler-connector/src/: agent.rs  client.rs  config.rs  lib.rs  runtime.rs
crates/parler-connector/tests/: discovery_e2e.rs  mesh_e2e.rs
crates/parler-hub/: Cargo.toml
crates/parler-hub/src/: lib.rs  main.rs  secret.rs  server.rs  store.rs
crates/parler-hub/tests/: smoke.rs
crates/parler-protocol/: Cargo.toml
crates/parler-protocol/src/: hub.rs  lib.rs  types.rs
deploy/: Dockerfile  README.md  docker-compose.yml
deploy/private/: README.md  docker-compose.yml
desktop/: .gitignore  README.md  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json
desktop/scripts/: build-binaries.sh  gen-icons.mjs
desktop/src/main/: external-url.ts  hub-supervisor.ts  index.ts  ipc.ts  mcp.ts  parler-cli.ts  paths.ts  private-file.ts  restart-gate.ts  session-store.ts  settings-defaults.ts  settings.ts  tray.ts
desktop/src/preload/: index.d.ts  index.ts
desktop/src/renderer/: index.html
desktop/src/shared/: channels.ts  conversation.ts  types.ts
desktop/tests/: conversation.test.mjs  external-url.test.mjs  private-file.test.mjs  settings-defaults.test.mjs
docs/: README.md  a2a-interop.md  agent-mesh.md  architecture.mmd  autonomous-runtime.md  ci-cd.md  code-handoff.md  code-review-guidelines.md  communication.md  discovery.md  engineering-guidelines.md  file-transfer.md  loop-engineering.md  patterns.md  provenance.md  sequence.mmd  storage-and-memory.md  task-lifecycle.md  team-sessions.md  troubleshooting.md  visible-host-adapters.md  vs-slack.md
docs/blog/: a2a-agent-discovery.md  agent-collaboration-vs-orchestration.md  agent-communication-the-next-turn.md  agent-memory-without-a-vector-database.md  ai-agent-memory-in-2026.md  bugs-that-hid-until-production.md  fetch-agent-memory-by-key.md  how-agents-hand-off-code.md  how-ai-agents-prove-who-they-are.md  how-ai-agents-send-each-other-files.md  how-to-connect-your-ai-agents.md  loop-engineering-the-gate-is-the-whole-loop.md  mcp-a2a-and-where-agents-live.md  real-time-messaging-for-ai-agents.md  sqlite-as-a-server-agent-hub.md  stop-copy-pasting-between-ai-agents.md  teach-your-agent-when-to-remember.md  what-a-chat-protocol-for-agents-needs.md  why-not-put-your-ai-agents-in-slack.md
docs/launch/: registry-listings.md
docs/marketing/: README.md  artwork-guide.md  campaigns.md  copy-library.md  positioning.md
docs/research/: agent-comms-protocol-hardening.md  parler-bring-spec.md  parler-launch-plan.md  parler-market-viability-audit.md  parler-resilience-security-audit.md  parler-ux-flow.md
examples/codex/: README.md
packaging/homebrew/: parler.rb
scripts/: canary-scan.sh  demo-bring.sh  demo-handoff.sh  dogfood.sh  hackathon-demo.sh  install.sh  seed-demo.sh  verify.sh
scripts/canary/: tokens.txt
scripts/ci/: .shellcheckrc  all.sh  audit.sh  desktop.sh  lib.sh  rust.sh  selftest.sh  smoke.sh  web.sh
tasks/: backlog.md  issue-sweep-2026-07-04.md  lessons.md  todo.md
web/: .env.example  README.md  next.config.ts  package-lock.json  package.json
web/app/: globals.css  layout.tsx  manifest.ts  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts  twitter-image.tsx
web/app/agent-communication/: page.tsx
web/app/agent-protocol/: page.tsx
web/app/blog/: page.tsx
web/app/docs/: layout.tsx  page.tsx
web/app/faq/: page.tsx
web/app/hub/: layout.tsx  page.tsx
web/app/session/: layout.tsx  page.tsx
web/app/wrapped/: layout.tsx  opengraph-image.tsx  page.tsx
web/components/: agents-console.tsx  claude-sim.tsx  directory.tsx  download.tsx  email-capture.tsx  examples.tsx  faq.tsx  footer.tsx  hero.tsx  logo.tsx  nav-bar.tsx  particle-field.tsx  reveal.tsx  seo-faq.tsx  session-hub.tsx  session-viewer.tsx  session-wrapped.tsx  sessions-feature.tsx
web/components/blog/: a2a-agent-discovery.tsx  agent-collaboration-vs-orchestration.tsx  agent-communication-the-next-turn.tsx  agent-memory-without-a-vector-database.tsx  ai-agent-memory-in-2026.tsx  bugs-that-hid-until-production.tsx  fetch-agent-memory-by-key.tsx  how-agents-hand-off-code.tsx  how-ai-agents-prove-who-they-are.tsx  how-ai-agents-send-each-other-files.tsx  how-to-connect-your-ai-agents.tsx  inside-parler.tsx  loop-engineering-the-gate-is-the-whole-loop.tsx  mcp-a2a-and-where-agents-live.tsx  prose.tsx  real-time-messaging-for-ai-agents.tsx  share-your-agent-context-with-your-team.tsx  sqlite-as-a-server-agent-hub.tsx  teach-your-agent-when-to-remember.tsx  what-a-chat-protocol-for-agents-needs.tsx  why-not-put-your-ai-agents-in-slack.tsx
web/components/docs/: core-concepts.tsx  file-and-code-handoff.tsx  introduction.tsx  memory.tsx  messaging.tsx  quickstart.tsx  (+6 more)
web/lib/: api.ts  blog.ts  docs.ts  og-mark.tsx  seo.ts  types.ts  wrapped-canvas.ts  wrapped.ts
(+40 files in other folders)
