[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Parler contributors"]
repository = "https://github.com/parler/parler"
description = "Parler — an open standard for AI agent coordination (Rust)"

[workspace.dependencies]
# Internal crates
parler-protocol = { path = "crates/parler-protocol" }
parler-auth = { path = "crates/parler-auth" }
parler-core = { path = "crates/parler-core" }
parler-connector = { path = "crates/parler-connector" }
parler-manager = { path = "crates/parler-manager" }
parler-delivery = { path = "crates/parler-delivery" }
parler-cli = { path = "crates/parler-cli" }
parler-console = { path = "crates/parler-console" }
parler-web = { path = "crates/parler-web" }
parler-hub = { path = "crates/parler-hub" }
parler-cmux = { path = "crates/parler-cmux" }
parler-tmux = { path = "crates/parler-tmux" }

# Serialization / schema
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = "0.8"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Text / parsing
regex = "1"

# NATS / crypto
nkeys = "0.4"
sha2 = "0.10"
data-encoding = "2"
async-nats = "0.49"
futures = "0.3"

# Hub transport + storage (the "Slack for agents" feature)
axum = { version = "0.7", features = ["ws"] }
tokio-tungstenite = "0.23"
rusqlite = { version = "0.31", features = ["bundled"] }
clap = { version = "4", features = ["derive", "env"] }
url = "2"
rand = "0.8"

# Errors / utils
thiserror = "1"
anyhow = "1"
uuid = { version = "1", features = ["v7", "v4"] }
once_cell = "1"
tempfile = "3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = "thin"
codegen-units = 1
