[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Tam Nguyen (tamdogood)", "Parler contributors"]
repository = "https://github.com/tamdogood/parler-ai"
description = "Parler — an open standard for AI agent coordination (Rust)"

[workspace.dependencies]
# Internal crates
parler-protocol = { path = "crates/parler-protocol" }
parler-auth = { path = "crates/parler-auth" }
parler-connector = { path = "crates/parler-connector" }
parler-cli = { path = "crates/parler-cli" }
parler-hub = { path = "crates/parler-hub" }

# Serialization / schema
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# NATS / crypto
nkeys = "0.4"
sha2 = "0.10"
data-encoding = "2"
async-nats = "0.49"
futures = "0.3"

# Hub transport + storage (the "Slack for agents" feature)
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors"] }
# `rustls-tls-webpki-roots` lets the client dial `wss://` (a public hub behind TLS). It bundles the
# Mozilla CA roots so it works in a minimal container, and reuses the rustls already in the tree.
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-webpki-roots"] }
# Pin the `ring` crypto provider so the wss:// client can install it as the process default. Only
# `ring` (no `aws-lc-rs`, so no C toolchain) — it's already compiled in via tokio-tungstenite above;
# this just gives us the API to call `install_default()`.
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rusqlite = { version = "0.31", features = ["bundled"] }
clap = { version = "4", features = ["derive", "env"] }
rand = "0.8"

# Errors / utils
thiserror = "1"
anyhow = "1"
uuid = { version = "1", features = ["v7", "v4"] }
tempfile = "3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = "thin"
codegen-units = 1
