[package]
name = "parler-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Parler Protocol identity + decentralized NATS JWT issuance (operator/account/user), profile ACLs, and nats-server config."

[dependencies]
parler-protocol = { workspace = true }
nkeys = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
data-encoding = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
async-nats = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
tempfile = { workspace = true }
