[package]
name = "parler-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Parler CLI — the `parler` subcommands (hub/init/invite/join/send/recv/remember/recall/...) and the `parler mcp` stdio server, both thin adapters over the MeshAgent core."

[dependencies]
parler-connector = { workspace = true }
parler-hub = { workspace = true }
parler-protocol = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
