[package]
name = "parler-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Parler Protocol wire contract: message types, subject grammar, and naming — the transport-agnostic standard."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
